--- a/greenEd/www/templates/allclasses.html
+++ b/greenEd/www/templates/allclasses.html
@@ -12,7 +12,7 @@
     </ion-nav-buttons>
    <ion-content class="has-header">
    	  <div ng-if="filterStatus" style="height:44px;"></div>
-
+      <ion-refresher pulling-text="Pull to refresh" on-refresh="fetchData(true)"></ion-refresher>
    <!--       <div class="item-input-inset">
             <ion-search placeholder="Search" filter="query.search"></ion-search>
          </div> -->
