--- a/greenEd/www/templates/allstudents.html
+++ b/greenEd/www/templates/allstudents.html
@@ -13,6 +13,7 @@
     </ion-nav-buttons>
    <ion-content class="has-header">
    	  <div ng-if="filterStatus" style="height:44px;"></div>
+      <ion-refresher pulling-text="Pull to refresh" on-refresh="fetchData(true)"></ion-refresher>
       <ion-list>
          <ion-item collection-repeat="student in students | filter:query.search.value | orderBy:['standard', 'name']" class="item item-icon-left positive" href="#/app/studentdashboard/{{student.standard}}-{{student.division}}/{{student.uid}}/{{student.name}}">
             <i class="icon ion-person"></i>
