--- a/greenEd/www/templates/allteachers.html
+++ b/greenEd/www/templates/allteachers.html
@@ -12,6 +12,7 @@
     </ion-nav-buttons>
    <ion-content class="has-header">
    	  <div ng-if="filterStatus" style="height:44px;"></div>
+      <ion-refresher pulling-text="Pull to refresh" on-refresh="fetchData(true)"></ion-refresher>
       <ion-list>
          <ion-item collection-repeat="teacher in teachers | filter:query.search.value" class="item item-icon-left positive" href="#/app/teacherdashboard/{{teacher.uid}}/{{teacher.name}}">
             <i class="icon ion-person"></i>
