--- a/greenEd/www/templates/teacherdashboard.html
+++ b/greenEd/www/templates/teacherdashboard.html
@@ -13,7 +13,7 @@
       <ion-list ng-show="dashboard">
          <div class="collection-repeat-container"><ion-item class="item-icon-left" href="#"><i class="icon ion-trophy positive"></i> <h2><span style="color:#aaa;font-weight:bold">Class - Topper</span> <span class="badge">Total</span></h2></ion-item></div>
          <span ng-repeat="(k, stoppers) in toppers">
-         <ion-item class="item-icon-left" ng-repeat="v in stoppers" href="#/app/studentdashboard/{{v.studentid}}/{{v.class}}"><i class="icon ion-person positive"></i> <h2>{{k.replace("_", " ")}} - {{v.student}} <span class="badge badge-positive">{{v.mark}}</span></h2></ion-item>
+         <ion-item class="item-icon-left" ng-repeat="v in stoppers" href="#/app/studentdashboard/{{v.class}}/{{v.studentid}}/{{v.student}}"><i class="icon ion-person positive"></i> <h2>{{k.replace("_", " ")}} - {{v.student}} <span class="badge badge-positive">{{v.mark}}</span></h2></ion-item>
          </span>
       </ion-list>
    </ion-content>
