--- a/greenEd/www/templates/account.html
+++ b/greenEd/www/templates/account.html
@@ -14,7 +14,8 @@
     Call Parent
     <i class="icon ion-ios-telephone-outline"></i>
   </a><a class="item item-icon-left" href="#"><i class="icon ion-home positive"></i> {{user.address}}</a>
-  <a class="item item-icon-left" href="#/app/timetable/{{user.standard}}-{{user.division}}/all"><i class="icon ion-ios-time-outline positive"></i>TimeTable</a>
+  <a ng-if="user.role == 'teacher'" class="item item-icon-left" href="#/app/timetable/{{user.uid}}"><i class="icon ion-ios-time-outline positive"></i>TimeTable</a>
+  <a ng-if="user.role == 'parent'" class="item item-icon-left" ng-repeat="student in user.students" href="#/app/timetable/{{student.class}}"><i class="icon ion-ios-time-outline positive"></i>TimeTable</a>  
   </div></div>
    </ion-content>
 </ion-view>
