--- a/greenEd/www/templates/wall.html
+++ b/greenEd/www/templates/wall.html
@@ -4,6 +4,11 @@
   </ion-nav-buttons>
    <ion-content>
    <ion-refresher pulling-text="Pull to refresh" on-refresh="getWall()"></ion-refresher>
+   <div ng-show="loading" class="list">
+    <a class="item center" href="#">
+    <ion-spinner icon="android"></ion-spinner>
+    </a>
+   </div>
     <div ng-show="empty" class="list">
     <a class="item item-icon-left" href="#">
     <i class="icon ion-ios-list positive"></i>
